Fixed unwanted horizontal scroll.

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -8,15 +8,12 @@
 html {
   position: relative;
   min-height: 100%;
-  width: 100vw;
   box-sizing: border-box;
   overflow-x: hidden;
 }
 
 body {
   height: 100%;
-  width: 100vw;
-  max-width: 100vw;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -25,7 +22,7 @@ body {
 
 #gatsby-focus-wrapper {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   margin: 0;
   padding: 0;
@@ -41,7 +38,7 @@ body {
   flex-direction: row;
   box-sizing: border-box;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
 }
 
@@ -63,8 +60,7 @@ main {
 @media only screen and (max-width: 720px) {
   main {
     padding: 30px 5%;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
     margin: 0;
   }
 }
